--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -4,6 +4,6 @@
     text-align: center;
     color:#fff;
     font-weight: 700;
-    background-color: green;
+    background-color: red;
     box-shadow: 0px 2px 2px rgba(0,0,0,0.25);
 }
